--- a/css/styles.css
+++ b/css/styles.css
@@ -15,9 +15,22 @@ body {
 }
 
 .paragraf {
-  line-height: 1.8;
+  line-height: 1.7;
   letter-spacing: 0.03em;
   color: #757575;
+}
+.command_title .paragraf,
+.any-works .paragraf {
+  text-align: center;
+   font-size: 16px;
+}
+
+.command_title .paragraf{
+line-height: 1.2;
+}
+
+.any-works .paragraf {
+line-height: 1.875;
 }
 
 .Studio_color {
@@ -98,14 +111,23 @@ footer {
   color: #212121;
 }
 
-.command_title .name,
-.any-works .name {
-  line-height: 1.2;
-  text-align: center;
+.name {
+   text-align: center;
   letter-spacing: 0.03em;
   color: #212121;
+
+}
+
+.command_title .name{
+   font-size: 16px;
+  line-height: 1.2;
   font-weight: 500;
+}
+
+.any-works .name{
+  font-weight: 700;
   font-size: 18px;
+  line-height: 2;
 }
 
 button:hover {
@@ -126,6 +148,7 @@ button:hover {
   line-height: 1.625;
   letter-spacing: 0.06em;
   font-family: inherit;
+  font-size: 16px;
 }
 .list-items > .link1:first-child {
   background-color: rgba(33, 150, 243, 1);
@@ -160,12 +183,6 @@ button:hover {
 .web,
 .mail_link {
   text-decoration: none;
-}
-
-.command_title .paragraf,
-.any-works .paragraf {
-  text-align: center;
-   font-size: 16px;
 }
 
 .list,
